--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Tielin Zhang"
-  avatar           : "images/图片1.jpg"
+  avatar           : "images/蓝底证件照.jpg"
   bio              : "Beijing University of Posts and Telecommunications"
   location         : "Beijing, China"
   employer         :
